# bulwark

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  bulwark.yaml  deny.toml  server.json
.github/workflows/: ci.yml  release.yml
crates/audit/: Cargo.toml
crates/audit/benches/: audit_write.rs
crates/audit/src/: event.rs  lib.rs  logger.rs  query.rs  retention.rs  store.rs
crates/auth/: Cargo.toml
crates/auth/src/: claims.rs  flows.rs  lib.rs  provider.rs
crates/cli/: Cargo.toml
crates/cli/src/: ca_trust.rs  main.rs
crates/cli/src/commands/: audit.rs  auth.rs  ca.rs  cred.rs  doctor.rs  init.rs  inspect.rs  mcp.rs  mod.rs  policy.rs  proxy.rs  session.rs  status.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/inspect/: Cargo.toml
crates/inspect-http/: Cargo.toml
crates/inspect-http/src/: cache.rs  circuit_breaker.rs  client.rs  config.rs  lib.rs  protocol.rs
crates/inspect-http/tests/: integration.rs
crates/inspect/benches/: content_inspection.rs
crates/inspect/src/: config.rs  finding.rs  lib.rs  patterns.rs  redactor.rs  rules.rs  scanner.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  gateway.rs  governance.rs  lib.rs  logging.rs  server.rs  types.rs  upstream.rs
crates/mcp/src/tools/: audit.rs  mod.rs  policy.rs  scan.rs  session.rs
crates/mcp/src/transport/: http.rs  mod.rs  session.rs  stdio.rs
crates/mcp/tests/: mcp_integration.rs
crates/policy/: Cargo.toml
crates/policy/benches/: policy_evaluation.rs
crates/policy/src/: context.rs  engine.rs  glob.rs  lib.rs  loader.rs  parser.rs  precedence.rs  schema.rs  validation.rs  verdict.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: context.rs  error_response.rs  forward.rs  handler.rs  lib.rs  logging.rs  server.rs  tls.rs  toolmap.rs  tunnel.rs
crates/proxy/tests/: proxy_integration.rs
crates/ratelimit/: Cargo.toml
crates/ratelimit/src/: bucket.rs  cost.rs  lib.rs  limiter.rs
crates/vault/: Cargo.toml
crates/vault/src/: binding.rs  credential.rs  encryption.rs  injection.rs  lib.rs  session.rs  store.rs
docs/: architecture.md  audit.md  configuration.md  content-inspector.md  credentials.md  getting-started.md  policy-reference.md  rate-limiting.md  threat-model.md
docs/agents/: claude-code.md  codex.md  openclaw.md
examples/echo-analyzer/: main.py
examples/policies/development/: base.yaml
examples/policies/enterprise/: base.yaml  production-guard.yaml  team-overrides.yaml
examples/policies/multi-agent/: agent-trust-levels.yaml  base.yaml
examples/policies/startup/: base.yaml
homebrew-tap/: README.md
homebrew-tap/Formula/: bulwark.rb
scripts/: bench.sh
