[workspace]
resolver = "2"
members = [
    "crates/proxy",
    "crates/config",
    "crates/common",
    "crates/cli",
    "crates/policy",
    "crates/vault",
    "crates/audit",
    "crates/inspect",
    "crates/mcp",
    "crates/ratelimit",
    "crates/inspect-http",
    "crates/auth",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
bulwark-common = { path = "crates/common" }
bulwark-config = { path = "crates/config" }
bulwark-proxy = { path = "crates/proxy" }
bulwark-mcp = { path = "crates/mcp" }
bulwark-policy = { path = "crates/policy" }
bulwark-vault = { path = "crates/vault" }
bulwark-audit = { path = "crates/audit" }
bulwark-inspect = { path = "crates/inspect" }
bulwark-ratelimit = { path = "crates/ratelimit" }
bulwark-inspect-http = { path = "crates/inspect-http" }
bulwark-auth = { path = "crates/auth" }

# Benchmarks
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP
hyper = { version = "1.6", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
http = "1.2"

# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "tls12"] }
rustls-pemfile = "2.2"
rustls-native-certs = "0.8"
rcgen = { version = "0.13", features = ["x509-parser", "pem"] }
pem = "3.0"
time = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency / hot-reload
arc-swap = "1.7"
notify = "7.0"

# Pattern matching
regex = "1.11"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
bytes = "1.9"
lru = "0.12"
parking_lot = "0.12"
dirs = "6.0"

# Vault / secrets
secrecy = { version = "0.10", features = ["serde"] }
age = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
rand = "0.8"
rpassword = "7.3"

# Testing
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3.14"
tokio-test = "0.4"
proptest = "1.5"
blake3 = "1.5"
wiremock = "0.6"
