[package]
name = "bulwark-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bulwark audit logging and event persistence"

[dependencies]
bulwark-common.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
