[package]
name = "bulwark-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bulwark-common = { path = "../common" }
openidconnect = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.43", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
secrecy = "0.10"
tracing = "0.1"
chrono = "0.4"
blake3 = "1.5"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.43", features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.14"
serde_json = "1.0"
