[package]
name = "bulwark-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bulwark CLI entry point"

[[bin]]
name = "bulwark"
path = "src/main.rs"

[dependencies]
bulwark-common.workspace = true
bulwark-config.workspace = true
bulwark-proxy.workspace = true
bulwark-mcp.workspace = true
bulwark-policy.workspace = true
bulwark-vault.workspace = true
bulwark-audit.workspace = true
bulwark-inspect.workspace = true
bulwark-inspect-http.workspace = true
tokio.workspace = true
tokio-util.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde_yaml.workspace = true
dirs.workspace = true
rpassword.workspace = true
secrecy.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
clap_complete.workspace = true
colored.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile = "3"
