[package]
name = "bulwark-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bulwark configuration loading and validation"

[dependencies]
bulwark-common.workspace = true
bulwark-inspect.workspace = true
serde.workspace = true
serde_yaml.workspace = true
dirs.workspace = true
tracing.workspace = true
