[package]
name = "bulwark-inspect-http"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bulwark Tier 2 HTTP callout analyzers for content inspection"

[dependencies]
bulwark-inspect = { path = "../inspect" }
bulwark-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
lru = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
