[package]
name = "bulwark-inspect"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bulwark content inspector"

[dependencies]
bulwark-common.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
