[package]
name = "bulwark-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bulwark MCP gateway"

[dependencies]
bulwark-common.workspace = true
bulwark-config.workspace = true
bulwark-policy.workspace = true
bulwark-vault.workspace = true
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
