[package]
name = "bulwark-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bulwark HTTP/HTTPS forward proxy core"

[dependencies]
bulwark-common.workspace = true
bulwark-config.workspace = true
bulwark-policy.workspace = true
bulwark-vault.workspace = true
bulwark-audit.workspace = true
bulwark-inspect.workspace = true
bulwark-ratelimit.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-native-certs.workspace = true
rcgen.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
lru.workspace = true
parking_lot.workspace = true
pem.workspace = true
time.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
secrecy.workspace = true
