[package]
name = "bulwark-ratelimit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bulwark rate limiting and cost tracking"

[dependencies]
bulwark-common.workspace = true
bulwark-config.workspace = true
bulwark-policy.workspace = true
parking_lot.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
